--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "promise-polyfill": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "serve": "latest",
     "slugify": "^1.3.0",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve ./build --single",
+    "devstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
