Be more specific about what to delete

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "serve ./build --single",
     "devstart": "react-scripts start",
-    "build": "react-scripts build && rm ./build/**/*.map",
+    "build": "react-scripts build && rm ./build/static/js/*.map",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "now-build": "echo 'Built on Travis CI'"
