--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: node_js
 node_js:
   - "node"
 cache:
+  yarn: true
   directories:
     - "node_modules" # This will tell Travis CI to cache the dependencies
-script: npm run build # Here you could also run the build step of your application
+script: yarn build # Here you could also run the build step of your application
 deploy:
   - provider: script # Run a custom deployment script which we will define below
     script: now --public --token $NOW_TOKEN
