--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ cache:
 script: yarn build # Here you could also run the build step of your application
 deploy:
   - provider: script # Run a custom deployment script which we will define below
-    script: now rm bet-with-goodall --safe --yes --token $NOW_TOKEN && now --regions bru --public --token $NOW_TOKEN
+    script: now --regions bru --public --token $NOW_TOKEN
     skip_cleanup: true
     on:
+      mater: false
       all_branches: true
   - provider: script
     script: now --regions bru --public --token $NOW_TOKEN && now alias --token $NOW_TOKEN && now rm bet-with-goodall --safe --yes --token $NOW_TOKEN 
