--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   directories:
     - "node_modules" # This will tell Travis CI to cache the dependencies
 script: yarn build # Here you could also run the build step of your application
+before_deploy: yarn add now
 deploy:
   - provider: script # Run a custom deployment script which we will define below
     script: now --regions bru --public --token $NOW_TOKEN
