--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-loading-overlay": "^0.3.0",
     "react-scripts": "1.1.4",
     "serve": "latest",
     "slugify": "^1.3.0",
@@ -37,7 +38,6 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.9.1",
-    "eslint-plugin-standard": "^3.1.0",
-    "now": "latest"
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
