--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "d3-array": "^1.2.1",
+    "d3-fetch": "^1.1.0",
+    "d3-format": "^1.3.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.1",
