--- a/package.json
+++ b/package.json
@@ -8,22 +8,6 @@
   },
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^4.1.1",
-    "d3-array": "^1.2.1",
-    "d3-fetch": "^1.1.0",
-    "d3-format": "^1.3.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-loading-overlay": "^0.3.0",
-    "react-scripts": "1.1.4",
-    "serve": "latest",
-    "slugify": "^1.3.0",
-    "whatwg-fetch": "^2.0.4"
-  },
   "scripts": {
     "start": "serve ./build --single",
     "devstart": "react-scripts start",
@@ -32,7 +16,14 @@
     "eject": "react-scripts eject",
     "now-build": "echo 'Built on Travis CI'"
   },
+  "dependencies": {
+    "serve": "latest"
+  },
   "devDependencies": {
+    "bootstrap": "^4.1.1",
+    "d3-array": "^1.2.1",
+    "d3-fetch": "^1.1.0",
+    "d3-format": "^1.3.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -41,6 +32,15 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.9.1",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-loading-overlay": "^0.3.0",
+    "react-scripts": "1.1.4",
+    "slugify": "^1.3.0",
+    "whatwg-fetch": "^2.0.4"
   }
 }
